加了一些注释，重构了下UI，显示上没有任何变化

--- a/css/style.css
+++ b/css/style.css
@@ -130,3 +130,9 @@ body{
 .topic{
 	opacity:0.8;
 }
+body {
+        padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+}
+#brand{
+	color:white;
+}
