--- a/css/style.css
+++ b/css/style.css
@@ -11,99 +11,43 @@ body{
 	word-wrap: break-word;
 	padding-top: 60px;
 }
+#main{
+	width:1200px;
+	margin-left:-130px;
+}
 .simpleheader{
 	display:block;
-	width:800px;
 	overflow:hidden;
 }
 .s_abstract{
 	display:block;
 	color:black;
 }
-.simpleheader:nth-child(4n+1){
-	width:350px;
-	font-size:12px;
-	line-height:18px;
-	padding:1px;
-	margin-top:5px;
-	margin-bottom:5px;
-	opacity:0.4;
-}
-.simpleheader:nth-child(4n+1) .s_author{
-	width:90px;
-	float:left;
-	height:18px;
-	overflow:hidden;
-}
-.simpleheader:nth-child(4n+1) .s_title{
-	float:right;
-	height:18px;
-	width:260px;
-	overflow:hidden;
-}
-.simpleheader:nth-child(4n+1) .s_abstract{
-	float:left;
-	clear:both;
-	max-height:36px;
-}
-
-
-.simpleheader:nth-child(5n+2),.simpleheader:nth-child(5n+4){
-	width:500px;
-	font-size:18px;
-	line-height:24px;
-	padding:5px;
-	margin-top:10px;
-	margin-bottom:10px;
-	margin-left:30px;
-	opacity:0.8;
-}
-.simpleheader:nth-child(5n+2) .s_author,.simpleheader:nth-child(5n+4) .s_author{
-	width:140px;
-	float:left;
-	height:24px;
-	overflow:hidden;
-}
-.simpleheader:nth-child(5n+2) .s_title, .simpleheader:nth-child(5n+4) .s_title{
-	float:right;
-	height:24px;
-	width:360px;
-	overflow:hidden;
-}
-.simpleheader:nth-child(5n+2) .s_abstract,.simpleheader:nth-child(5n+4) .s_abstract{
-	float:left;
-	clear:both;
-	max-height:48px;
-}
-
-
-.simpleheader:nth-child(5n+3){
-	width:800px;
-	font-size:36px;
+.simpleheader{
+	margin:20px 0 20px 0;
+	width:100%;
+	font-size:40px;
 	line-height:50px;
 	padding:10px;
-	margin-top:10px;
-	margin-bottom:10px;
-	margin-left:35px;
+	opacity:0.9;
 }
-.simpleheader:nth-child(5n+3) .s_author{
-	width:220px;
+.s_author{
+	width:25%;
 	float:left;
 	height:50px;
 	overflow:hidden;
 }
-.simpleheader:nth-child(5n+3) .s_title{
+.s_title{
 	float:right;
 	height:50px;
-	font-size:24px;
-	width:580px;
+	width:75%;
 	overflow:hidden;
 }
-.simpleheader:nth-child(5n+3) .s_abstract{
+.s_abstract{
 	float:left;
 	clear:both;
-	max-height:252px;
-	line-height:84px;
 	font-size:56px;
+	line-height:60px;
+	min-height:80px;
+	max-height:180px;
 }
-
