--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,22 @@ body{
 	word-wrap: break-word;
 	padding-top: 60px;
 }
+#brand{
+	color:white;
+	font-size:28px;
+	font-family:"微软雅黑";
+	
+}
+#info{
+	font-size:20px;
+	color:white;
+	line-height:40px;
+	font-family:"宋体";
+	font-weight:bold;
+}
+#board_name{
+	font-size:22px;
+}
 #main{
 	width:1200px;
 	margin-left:-130px;
