--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,14 @@
 .c36 {color: #33a0a0;}
 .c37 {color: #000000;}
 body{
-	background:url("../img/bg.jpg");
+	background:url("../img/wood_color.jpg");
 	word-wrap: break-word;
 	padding-top: 60px;
+}
+.navbar-fixed-top{
+	-moz-box-shadow:2px 2px 10px black;
+	-webkit-box-shadow:2px 2px 10px black;
+	box-shadow:2px 2px 10px black;
 }
 #brand{
 	color:white;
@@ -34,7 +39,11 @@ body{
 .simpleheader{
 	display:block;
 	overflow:hidden;
+	-moz-box-shadow:	4px 4px 10px black;
+	-webkit-box-shadow:	4px 4px 10px black;
+	box-shadow:			4px 4px 10px black;	
 }
+
 .s_abstract{
 	display:block;
 	color:black;
